fix: search input width on mobile version

--- a/css/style.css
+++ b/css/style.css
@@ -1608,6 +1608,10 @@ template {
     margin-left: 0;
     margin-top: 10px;
   }
+  .search__input {
+    min-width: 245px;
+    width: 100%;
+  }
   .stars {
     -ms-flex-preferred-size: auto;
         flex-basis: auto;
