--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -162,6 +162,9 @@
         color: $light
         margin-left: 0
         margin-top: 10px
+  .search
+    &__input
+      width: 100%
   .stars
     flex-basis: auto
   .hotel
